--- a/web/viewer.html
+++ b/web/viewer.html
@@ -732,5 +732,33 @@ See https://github.com/adobe-type-tools/cmap-resources
 
     </div> <!-- outerContainer -->
     <div id="printContainer"></div>
+    <script>
+  (async function () {
+    const query = new URLSearchParams(window.location.search);
+    const fileKey = query.get("fileKey");
+
+    if (!fileKey) {
+      alert("Missing fileKey");
+      return;
+    }
+
+    try {
+      const response = await fetch(`https://8a73bzipp6.execute-api.us-west-1.amazonaws.com/pdf-proxy?fileKey=${encodeURIComponent(fileKey)}`);
+      if (!response.ok) throw new Error("Failed to fetch presigned URL");
+      const presignedUrl = await response.text();
+
+      if (window.PDFViewerApplication) {
+        PDFViewerApplication.open(presignedUrl);
+      } else {
+        document.addEventListener("webviewerloaded", () => {
+          PDFViewerApplication.open(presignedUrl);
+        });
+      }
+    } catch (err) {
+      console.error(err);
+      alert("Error loading PDF");
+    }
+  })();
+</script>
   </body>
 </html>
