--- a/web/viewer.html
+++ b/web/viewer.html
@@ -1,44 +1,15 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>PDF Viewer</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-      font-family: sans-serif;
-    }
-    #pdfViewer {
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background: #f8f8f8;
-    }
-    canvas {
-      display: block;
-      margin: 0 auto;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-    }
-  </style>
-</head>
-<body style="margin: 0; font-family: sans-serif; background: #f9f9f9;">
-
-  <!-- Header -->
-  <header id="pdf-title" style="font-size: 1.8rem; font-weight: 600; text-align: center; padding: 24px 16px; background: #fff; border-bottom: 1px solid #ccc;">
-    <!-- Title dynamically inserted here -->
+﻿<body style="margin: 0; font-family: sans-serif;">
+  <header style="font-size: 1.5rem; text-align: center; padding: 20px; background: #f9f9f9; border-bottom: 1px solid #ddd;" id="pdf-title">
+    <!-- Title will appear here -->
   </header>
 
-  <!-- PDF Viewer Container -->
-  <main style="max-width: 960px; margin: 0 auto; padding: 24px;">
-    <div id="pdfViewer" style="box-shadow: 0 2px 8px rgba(0,0,0,0.1); background: white; padding: 16px; border-radius: 8px;"></div>
-  </main>
+  <div id="pdfViewer" style="padding: 20px; max-width: 800px; margin: auto; overflow-y: auto;">
+    <!-- Pages rendered here -->
+  </div>
 
-  <!-- PDF.js Script Module -->
   <script type="module">
     import * as pdfjsLib from './build/pdf.mjs';
+    pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
 
     const urlParams = new URLSearchParams(window.location.search);
     const fileUrl = urlParams.get('file');
@@ -48,45 +19,39 @@
       throw new Error('Missing file parameter');
     }
 
-    // Setup worker
-    pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
-
-    // Extract title from presigned URL
+    // --- Title Extraction ---
     function extractFileNameFromPresignedUrl(url) {
       try {
         const parsed = new URL(url);
         const fileKey = parsed.searchParams.get('fileKey');
         if (!fileKey) return null;
 
-        const pathParts = fileKey.split('/');
-        const fileName = pathParts[pathParts.length - 1];
-        const baseName = decodeURIComponent(fileName.replace(/\.[^/.]+$/, ''));
-        return baseName;
+        const parts = fileKey.split('/');
+        const filename = decodeURIComponent(parts.pop().replace(/\.[^/.]+$/, ''));
+        return filename;
       } catch (e) {
         console.error('Failed to extract title:', e);
         return null;
       }
     }
 
-    const presignedUrl = urlParams.get("file");
-    const title = extractFileNameFromPresignedUrl(presignedUrl);
+    const title = extractFileNameFromPresignedUrl(fileUrl);
     if (title) {
       document.getElementById('pdf-title').textContent = title;
     }
 
-    // Render PDF
+    // --- Render PDF ---
     const loadingTask = pdfjsLib.getDocument(fileUrl);
     loadingTask.promise.then(pdf => {
       const container = document.getElementById('pdfViewer');
-
       for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
         pdf.getPage(pageNum).then(page => {
           const canvas = document.createElement('canvas');
-          canvas.style.marginBottom = '24px';
+          canvas.style.marginBottom = '20px';
           container.appendChild(canvas);
 
           const context = canvas.getContext('2d');
-          const viewport = page.getViewport({ scale: 1.5 });
+          const viewport = page.getViewport({ scale: 1.3 });
 
           canvas.height = viewport.height;
           canvas.width = viewport.width;
@@ -94,31 +59,17 @@
           page.render({ canvasContext: context, viewport });
         });
       }
-    }).catch(error => {
-      console.error('Error loading PDF:', error);
+    }).catch(err => {
+      console.error('Error loading PDF:', err);
       document.getElementById('pdfViewer').textContent = 'Error loading PDF.';
     });
-  </script>
 
-  <!-- Print/Download Suppression -->
-  <script>
-    document.addEventListener('contextmenu', (e) => e.preventDefault());
-
-    document.addEventListener('keydown', (e) => {
-      const isMac = navigator.platform.toUpperCase().includes('MAC');
-      const ctrlOrCmd = isMac ? e.metaKey : e.ctrlKey;
-
-      if (
-        (ctrlOrCmd && e.key.toLowerCase() === 'p') ||
-        (ctrlOrCmd && e.key.toLowerCase() === 's') ||
-        (e.key === 'F12') ||
-        (ctrlOrCmd && e.shiftKey && e.key.toLowerCase() === 'i')
-      ) {
+    // --- Block Print / Download / Ctrl+S ---
+    window.addEventListener('keydown', (e) => {
+      if ((e.ctrlKey || e.metaKey) && ['p', 's'].includes(e.key.toLowerCase())) {
         e.preventDefault();
+        alert("Printing and saving have been disabled.");
       }
     });
   </script>
-
 </body>
-
-</html>
