--- a/web/viewer.html
+++ b/web/viewer.html
@@ -1,75 +1,75 @@
-﻿<body style="margin: 0; font-family: sans-serif;">
-  <header style="font-size: 1.5rem; text-align: center; padding: 20px; background: #f9f9f9; border-bottom: 1px solid #ddd;" id="pdf-title">
-    <!-- Title will appear here -->
-  </header>
+﻿<script type="module">
+  import * as pdfjsLib from './build/pdf.mjs';
 
-  <div id="pdfViewer" style="padding: 20px; max-width: 800px; margin: auto; overflow-y: auto;">
-    <!-- Pages rendered here -->
-  </div>
+  // Parse ?file= URL
+  const urlParams = new URLSearchParams(window.location.search);
+  const fileUrl = urlParams.get('file');
 
-  <script type="module">
-    import * as pdfjsLib from './build/pdf.mjs';
-    pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
+  if (!fileUrl) {
+    document.getElementById('pdfViewer').textContent = 'Missing ?file= URL';
+    throw new Error('Missing file parameter');
+  }
 
-    const urlParams = new URLSearchParams(window.location.search);
-    const fileUrl = urlParams.get('file');
+  // Setup worker
+  pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
 
-    if (!fileUrl) {
-      document.getElementById('pdfViewer').textContent = 'Missing ?file= URL';
-      throw new Error('Missing file parameter');
+  // Extract and display title from presigned URL
+  function extractFileNameFromPresignedUrl(url) {
+    try {
+      const parsed = new URL(url);
+      const fileKey = parsed.searchParams.get('fileKey');
+      if (!fileKey) return null;
+
+      const pathParts = fileKey.split('/');
+      const fileName = pathParts[pathParts.length - 1];
+      const baseName = decodeURIComponent(fileName.replace(/\.[^/.]+$/, ''));
+      return baseName;
+    } catch (e) {
+      console.error('Failed to extract title:', e);
+      return null;
     }
+  }
 
-    // --- Title Extraction ---
-    function extractFileNameFromPresignedUrl(url) {
-      try {
-        const parsed = new URL(url);
-        const fileKey = parsed.searchParams.get('fileKey');
-        if (!fileKey) return null;
+  const title = extractFileNameFromPresignedUrl(fileUrl);
+  if (title) {
+    document.getElementById('pdf-title').textContent = title;
+  }
 
-        const parts = fileKey.split('/');
-        const filename = decodeURIComponent(parts.pop().replace(/\.[^/.]+$/, ''));
-        return filename;
-      } catch (e) {
-        console.error('Failed to extract title:', e);
-        return null;
-      }
+  // Dynamic scale for different screen sizes
+  const screenWidth = window.innerWidth;
+  let scale = 1.3;
+  if (screenWidth < 768) {
+    scale = 0.9; // Mobile
+  } else if (screenWidth < 1024) {
+    scale = 1.1; // Tablet
+  }
+
+  // Load and render PDF
+  const loadingTask = pdfjsLib.getDocument(fileUrl);
+  loadingTask.promise.then(pdf => {
+    const container = document.getElementById('pdfViewer');
+
+    for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
+      pdf.getPage(pageNum).then(page => {
+        const viewport = page.getViewport({ scale });
+        const outputScale = window.devicePixelRatio || 1;
+
+        const canvas = document.createElement('canvas');
+        const context = canvas.getContext('2d');
+
+        canvas.width = viewport.width * outputScale;
+        canvas.height = viewport.height * outputScale;
+        canvas.style.width = `${viewport.width}px`;
+        canvas.style.height = `${viewport.height}px`;
+
+        context.setTransform(outputScale, 0, 0, outputScale, 0, 0);
+
+        container.appendChild(canvas);
+        page.render({ canvasContext: context, viewport });
+      });
     }
-
-    const title = extractFileNameFromPresignedUrl(fileUrl);
-    if (title) {
-      document.getElementById('pdf-title').textContent = title;
-    }
-
-    // --- Render PDF ---
-    const loadingTask = pdfjsLib.getDocument(fileUrl);
-    loadingTask.promise.then(pdf => {
-      const container = document.getElementById('pdfViewer');
-      for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
-        pdf.getPage(pageNum).then(page => {
-          const canvas = document.createElement('canvas');
-          canvas.style.marginBottom = '20px';
-          container.appendChild(canvas);
-
-          const context = canvas.getContext('2d');
-          const viewport = page.getViewport({ scale: 1.3 });
-
-          canvas.height = viewport.height;
-          canvas.width = viewport.width;
-
-          page.render({ canvasContext: context, viewport });
-        });
-      }
-    }).catch(err => {
-      console.error('Error loading PDF:', err);
-      document.getElementById('pdfViewer').textContent = 'Error loading PDF.';
-    });
-
-    // --- Block Print / Download / Ctrl+S ---
-    window.addEventListener('keydown', (e) => {
-      if ((e.ctrlKey || e.metaKey) && ['p', 's'].includes(e.key.toLowerCase())) {
-        e.preventDefault();
-        alert("Printing and saving have been disabled.");
-      }
-    });
-  </script>
-</body>
+  }).catch(error => {
+    console.error('Error loading PDF:', error);
+    document.getElementById('pdfViewer').textContent = 'Error loading PDF.';
+  });
+</script>
