--- a/web/viewer.html
+++ b/web/viewer.html
@@ -1,4 +1,13 @@
-﻿<script type="module">
+﻿<body style="margin: 0; font-family: sans-serif;">
+  <header style="font-size: 1.5rem; text-align: center; padding: 20px; background: #f9f9f9; border-bottom: 1px solid #ddd;" id="pdf-title">
+    <!-- Title will appear here -->
+  </header>
+
+  <div id="pdfViewer" style="padding: 20px; max-width: 800px; margin: auto; overflow-y: auto;">
+    <!-- Pages rendered here -->
+  </div>
+
+  <script type="module">
   import * as pdfjsLib from './build/pdf.mjs';
 
   // Parse ?file= URL
@@ -73,3 +82,5 @@
     document.getElementById('pdfViewer').textContent = 'Error loading PDF.';
   });
 </script>
+
+</body>
