--- a/web/viewer.html
+++ b/web/viewer.html
@@ -10,7 +10,6 @@
   <script type="module">
   import * as pdfjsLib from './build/pdf.mjs';
 
-  // Parse ?file= URL
   const urlParams = new URLSearchParams(window.location.search);
   const fileUrl = urlParams.get('file');
 
@@ -22,13 +21,12 @@
   // Setup worker
   pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
 
-  // Extract and display title from presigned URL
+  // Title Extraction
   function extractFileNameFromPresignedUrl(url) {
     try {
       const parsed = new URL(url);
       const fileKey = parsed.searchParams.get('fileKey');
       if (!fileKey) return null;
-
       const pathParts = fileKey.split('/');
       const fileName = pathParts[pathParts.length - 1];
       const baseName = decodeURIComponent(fileName.replace(/\.[^/.]+$/, ''));
@@ -39,41 +37,38 @@
     }
   }
 
-  const title = extractFileNameFromPresignedUrl(fileUrl);
+  const presignedUrl = urlParams.get("file");
+  const title = extractFileNameFromPresignedUrl(presignedUrl);
   if (title) {
     document.getElementById('pdf-title').textContent = title;
   }
 
-  // Dynamic scale for different screen sizes
-  const screenWidth = window.innerWidth;
-  let scale = 1.3;
-  if (screenWidth < 768) {
-    scale = 0.9; // Mobile
-  } else if (screenWidth < 1024) {
-    scale = 1.1; // Tablet
+  // --- Smart Scale for Screen Size ---
+  function getOptimalScale() {
+    const screenWidth = window.innerWidth;
+    if (screenWidth < 600) return 0.8;
+    if (screenWidth < 900) return 1.1;
+    return 1.5; // default for desktop
   }
 
-  // Load and render PDF
   const loadingTask = pdfjsLib.getDocument(fileUrl);
   loadingTask.promise.then(pdf => {
     const container = document.getElementById('pdfViewer');
 
     for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
       pdf.getPage(pageNum).then(page => {
-        const viewport = page.getViewport({ scale });
-        const outputScale = window.devicePixelRatio || 1;
-
         const canvas = document.createElement('canvas');
-        const context = canvas.getContext('2d');
-
-        canvas.width = viewport.width * outputScale;
-        canvas.height = viewport.height * outputScale;
-        canvas.style.width = `${viewport.width}px`;
-        canvas.style.height = `${viewport.height}px`;
-
-        context.setTransform(outputScale, 0, 0, outputScale, 0, 0);
-
+        canvas.style.display = 'block';
+        canvas.style.margin = '0 auto';
+        canvas.style.maxWidth = '100%';
         container.appendChild(canvas);
+
+        const context = canvas.getContext('2d');
+        const viewport = page.getViewport({ scale: getOptimalScale() });
+
+        canvas.width = viewport.width;
+        canvas.height = viewport.height;
+
         page.render({ canvasContext: context, viewport });
       });
     }
