--- a/web/viewer.html
+++ b/web/viewer.html
@@ -1,4 +1,31 @@
-﻿<body style="margin: 0; font-family: sans-serif;">
+﻿<head>
+  <meta charset="UTF-8" />
+  <title>PDF Viewer</title>
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      overflow-x: hidden;
+    }
+
+    #pdfViewer canvas {
+      width: 100% !important;
+      height: auto !important;
+      display: block;
+      margin: 0 auto;
+    }
+
+    header#pdf-title {
+      font-size: 1.5rem;
+      text-align: center;
+      padding: 20px;
+    }
+  </style>
+</head>
+
+<body style="margin: 0; font-family: sans-serif;">
   <header style="font-size: 1.5rem; text-align: center; padding: 20px; background: #f9f9f9; border-bottom: 1px solid #ddd;" id="pdf-title">
     <!-- Title will appear here -->
   </header>
