--- a/web/viewer.html
+++ b/web/viewer.html
@@ -1,60 +1,21 @@
-﻿<head>
-  <meta charset="UTF-8" />
-  <title>PDF Viewer</title>
-
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-      overflow-x: hidden;
-    }
-
-    #pdfViewer canvas {
-      width: 100% !important;
-      height: auto !important;
-      display: block;
-      margin: 0 auto;
-    }
-
-    header#pdf-title {
-      font-size: 1.5rem;
-      text-align: center;
-      padding: 20px;
-    }
-  </style>
-</head>
-
-<body style="margin: 0; font-family: sans-serif;">
-  <header style="font-size: 1.5rem; text-align: center; padding: 20px; background: #f9f9f9; border-bottom: 1px solid #ddd;" id="pdf-title">
-    <!-- Title will appear here -->
-  </header>
-
-  <div id="pdfViewer" style="padding: 20px; max-width: 800px; margin: auto; overflow-y: auto;">
-    <!-- Pages rendered here -->
-  </div>
-
-  <script type="module">
+﻿<script type="module">
   import * as pdfjsLib from './build/pdf.mjs';
 
   const urlParams = new URLSearchParams(window.location.search);
-  const fileUrl = urlParams.get('file');
+  const fileKey = urlParams.get('fileKey');
 
-  if (!fileUrl) {
-    document.getElementById('pdfViewer').textContent = 'Missing ?file= URL';
-    throw new Error('Missing file parameter');
+  if (!fileKey) {
+    document.getElementById('pdfViewer').textContent = 'Missing ?fileKey= URL';
+    throw new Error('Missing fileKey parameter');
   }
 
   // Setup worker
   pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
 
   // Title Extraction
-  function extractFileNameFromPresignedUrl(url) {
+  function extractFileNameFromFileKey(key) {
     try {
-      const parsed = new URL(url);
-      const fileKey = parsed.searchParams.get('fileKey');
-      if (!fileKey) return null;
-      const pathParts = fileKey.split('/');
+      const pathParts = key.split('/');
       const fileName = pathParts[pathParts.length - 1];
       const baseName = decodeURIComponent(fileName.replace(/\.[^/.]+$/, ''));
       return baseName;
@@ -64,8 +25,7 @@
     }
   }
 
-  const presignedUrl = urlParams.get("file");
-  const title = extractFileNameFromPresignedUrl(presignedUrl);
+  const title = extractFileNameFromFileKey(fileKey);
   if (title) {
     document.getElementById('pdf-title').textContent = title;
   }
@@ -78,31 +38,39 @@
     return 1.5; // default for desktop
   }
 
-  const loadingTask = pdfjsLib.getDocument(fileUrl);
-  loadingTask.promise.then(pdf => {
-    const container = document.getElementById('pdfViewer');
+  // Fetch presigned URL
+  const apiUrl = 'https://8a73bzipp6.execute-api.us-west-1.amazonaws.com/GeneratePresignedUrl';
+  const fetchUrl = `${apiUrl}?fileKey=${encodeURIComponent(fileKey)}`;
 
-    for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
-      pdf.getPage(pageNum).then(page => {
-        const canvas = document.createElement('canvas');
-        canvas.style.display = 'block';
-        canvas.style.margin = '0 auto';
-        canvas.style.maxWidth = '100%';
-        container.appendChild(canvas);
+  fetch(fetchUrl)
+    .then(response => response.json())
+    .then(data => {
+      const presignedUrl = data.url;
+      return pdfjsLib.getDocument(presignedUrl).promise;
+    })
+    .then(pdf => {
+      const container = document.getElementById('pdfViewer');
 
-        const context = canvas.getContext('2d');
-        const viewport = page.getViewport({ scale: getOptimalScale() });
+      for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
+        pdf.getPage(pageNum).then(page => {
+          const canvas = document.createElement('canvas');
+          canvas.style.display = 'block';
+          canvas.style.margin = '0 auto';
+          canvas.style.maxWidth = '100%';
+          container.appendChild(canvas);
 
-        canvas.width = viewport.width;
-        canvas.height = viewport.height;
+          const context = canvas.getContext('2d');
+          const viewport = page.getViewport({ scale: getOptimalScale() });
 
-        page.render({ canvasContext: context, viewport });
-      });
-    }
-  }).catch(error => {
-    console.error('Error loading PDF:', error);
-    document.getElementById('pdfViewer').textContent = 'Error loading PDF.';
-  });
+          canvas.width = viewport.width;
+          canvas.height = viewport.height;
+
+          page.render({ canvasContext: context, viewport });
+        });
+      }
+    })
+    .catch(error => {
+      console.error('Error loading PDF:', error);
+      document.getElementById('pdfViewer').textContent = 'Error loading PDF.';
+    });
 </script>
-
-</body>
