--- a/web/viewer.html
+++ b/web/viewer.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>PDF Viewer</title>
+
   <style>
     body {
       margin: 0;
@@ -10,12 +11,14 @@
       font-family: sans-serif;
       overflow-x: hidden;
     }
+
     #pdfViewer canvas {
       width: 100% !important;
       height: auto !important;
       display: block;
       margin: 0 auto;
     }
+
     header#pdf-title {
       font-size: 1.5rem;
       text-align: center;
@@ -23,74 +26,82 @@
       background: #f9f9f9;
       border-bottom: 1px solid #ddd;
     }
+
+    #pdfViewer {
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+      overflow-y: auto;
+    }
   </style>
 </head>
+
 <body>
-  <header id="pdf-title">
-    <!-- Title will appear here -->
-  </header>
-  <div id="pdfViewer" style="padding: 20px; max-width: 800px; margin: auto; overflow-y: auto;">
-    <!-- Pages rendered here -->
-  </div>
+  <header id="pdf-title">Loading PDF Title...</header>
+  <div id="pdfViewer">Loading PDF...</div>
 
   <script type="module">
     import * as pdfjsLib from './build/pdf.mjs';
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const urlParams = new URLSearchParams(window.location.search);
-      const fileUrl = urlParams.get('fileKey');
+    pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
 
-      if (!fileUrl) {
-        document.getElementById('pdfViewer').textContent = 'Missing ?fileKey= URL';
-        throw new Error('Missing fileKey parameter');
-      }
+    const urlParams = new URLSearchParams(window.location.search);
+    const fileKey = urlParams.get('fileKey');
 
-      // Setup worker
-      pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
+    if (!fileKey) {
+      document.getElementById('pdfViewer').textContent = 'Missing ?fileKey= parameter.';
+      throw new Error('Missing fileKey query parameter');
+    }
 
-      // Title Extraction
-      function extractFileName(fileKey) {
-        const parts = fileKey.split('/');
-        const lastPart = parts[parts.length - 1];
-        return decodeURIComponent(lastPart.replace(/\.[^/.]+$/, ''));
-      }
+    // Extract and display the PDF title
+    function extractTitle(key) {
+      const segments = key.split('/');
+      const filename = segments[segments.length - 1];
+      return decodeURIComponent(filename.replace(/\.[^/.]+$/, ''));
+    }
 
-      const title = extractFileName(fileUrl);
-      document.getElementById('pdf-title').textContent = title;
+    document.getElementById('pdf-title').textContent = extractTitle(fileKey);
 
-      // Smart scaling
-      function getOptimalScale() {
-        const screenWidth = window.innerWidth;
-        if (screenWidth < 600) return 0.8;
-        if (screenWidth < 900) return 1.1;
-        return 1.5;
-      }
+    // Fetch the presigned URL from Lambda
+    async function fetchPresignedUrl(fileKey) {
+      const endpoint = "https://8a73bzipp6.execute-api.us-west-1.amazonaws.com/$default/GeneratePresignedUrl";
+      const response = await fetch(`${endpoint}?fileKey=${encodeURIComponent(fileKey)}`);
+      if (!response.ok) throw new Error("Failed to get presigned URL");
+      const data = await response.json();
+      return data.url;
+    }
 
-      const loadingTask = pdfjsLib.getDocument(fileUrl);
-      loadingTask.promise.then(pdf => {
+    // Load and render the PDF
+    fetchPresignedUrl(fileKey)
+      .then(presignedUrl => {
+        return pdfjsLib.getDocument(presignedUrl).promise;
+      })
+      .then(pdf => {
         const container = document.getElementById('pdfViewer');
+        container.innerHTML = '';
+
+        const scale = window.innerWidth < 600 ? 0.9 : window.innerWidth < 900 ? 1.1 : 1.5;
+
         for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
           pdf.getPage(pageNum).then(page => {
             const canvas = document.createElement('canvas');
-            canvas.style.display = 'block';
-            canvas.style.margin = '0 auto';
-            canvas.style.maxWidth = '100%';
-            container.appendChild(canvas);
-
             const context = canvas.getContext('2d');
-            const viewport = page.getViewport({ scale: getOptimalScale() });
+            const viewport = page.getViewport({ scale });
 
             canvas.width = viewport.width;
             canvas.height = viewport.height;
+            canvas.style.marginBottom = '20px';
+
+            container.appendChild(canvas);
 
             page.render({ canvasContext: context, viewport });
           });
         }
-      }).catch(error => {
+      })
+      .catch(error => {
         console.error('Error loading PDF:', error);
         document.getElementById('pdfViewer').textContent = 'Error loading PDF.';
       });
-    });
   </script>
 </body>
 </html>
